TLS added and some fix

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html ng-app="Rsa">
 <head>
     <meta charset="UTF-8">
-    <title>RSA</title>
+    <title>CITIES 2</title>
 
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/big-integer/BigInteger.min.js"></script>
@@ -19,6 +19,7 @@ PELELELE...!
 <button ng-click="rsa()">RSA </button>
 <button ng-click="blindSign()">Blind signature</button>
 <button ng-click="nonRepudiation()">No repudio</button>
+<button ng-click="zkp()">Zero knowledge proof</button>
 </body>
 
 </html>
