--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@ PELELELE...!
 <button ng-click="blindSign()">Blind signature</button>
 <button ng-click="nonRepudiation()">No repudio</button>
 <button ng-click="zkp()">Zero knowledge proof</button>
+<button ng-click="paillier()">Paillier </button>
 </body>
 
 </html>
