--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <script src="bower_components/convert-hex.js"></script>
     <script src="helpers/rsa-biginteger.js"></script>
     <script src="helpers/rsa-complement.js"></script>
+    <script src="helpers/shared-secret.js"></script>
     <script src="bower_components/crypto-js/crypto-js.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="controllers/user.js"></script>
@@ -19,7 +20,7 @@ PELELELE...!
 <button ng-click="rsa()">RSA </button>
 <button ng-click="blindSign()">Blind signature</button>
 <button ng-click="nonRepudiation()">No repudio</button>
-<button ng-click="zkp()">Zero knowledge proof</button>
+<button ng-click="Threshold()">Threshold</button>
 <button ng-click="paillier()">Paillier </button>
 </body>
 
