--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="javascript/routes.js"></script>
+    <script src="controllers/routes.js"></script>
     <script src="./controllers/all_in_one.js"></script>
     <script src="controllers/navbarController.js"></script>
 
@@ -36,7 +36,7 @@
                 <li><a href="#/blind">Blind signature</a></li>
                 <li><a href="#/repudiation">Non repudiation</a></li>
                 <li><a href="#/paillier">Paillier</a></li>
-                <li><a href="#/threshol">Secret threshold</a></li>
+                <li><a href="#/threshold">Secret threshold</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
