Rsa module view added

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Note Wrangler</title>
+    <title>Cities 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="index.css">
@@ -12,6 +12,7 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/big-integer/BigInteger.js"></script>
     <script src="controllers/routes.js"></script>
     <script src="./controllers/all_in_one.js"></script>
     <script src="controllers/navbarController.js"></script>
